--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -43,7 +43,12 @@ body {
   color: #111827;
 }
 
-.nav__link--active {
+.nav__link:link,
+.nav__link:visited {
+  color: #374151; /* slate-700 */
+}
+
+.nav__link.nav__link--active {
   color: #111827;
   border-bottom: 2px solid #2563eb;
   padding-bottom: 0.25rem;
